--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -18,14 +18,16 @@
     <textarea name="post[content]" rows="8" cols="40"><%= post.content %></textarea>
   </label>
   <br>
-  <label>
-    Sub
-    <select name="post[sub_id]">
-      <% @subs.each do |sub| %>
-        <option value="<%= sub.id %>"><%= sub.title %></option>
-      <% end %>
-    </select>
-  </label>
+  <section>
+    Subs - must select at least one <br>
+    <input type="hidden" name="post[sub_ids][]" value="">
+    <% @subs.each do |sub| %>
+    <label>
+      <input type="checkbox" name="post[sub_ids][]" value="<%= sub.id %>" <%= "checked" if post.subs.include?(sub) %> />
+      <%= sub.title %>
+    </label>
+    <% end %>
+  </section>
   <br>
   <button>Submit</button>
 </form>
