--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,11 @@
-<%= link_to @object.sub.title, sub_url(@object.sub) %>
+<% @object.subs.each do |sub| %>
+  <%= link_to sub.title, sub_url(sub) %>
+  <% end %>
 <h1><%= @object.title %> <small><%= @object.url %></small></h1>
 <h2>by <%= @object.author.username %></h2>
 <p>
   <%= @object.content %>
 </p>
+<section>
+  <%= render 'shared/comment_section', post: @object %>
+</section>
