--- a/app/views/shared/_comment_section.html.erb
+++ b/app/views/shared/_comment_section.html.erb
@@ -1,4 +1,4 @@
 
 <%= render "shared/comment_form", post_id: post.id, parent_comment_id: nil %>
 
-<%= render "shared/comments", comments: post.comments %>
+<%= render "shared/comments", comments: @all_comments[nil] %>
