--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,6 +1,10 @@
 <li>
   <strong><%= comment.author.username %></strong> - <small><%= time_ago_in_words(comment.created_at) %> ago</small>
   <br>
+  <%= link_to "upvote", comment_upvote_url(comment), method: :post %> |
+  <%= link_to "downvote", comment_downvote_url(comment), method: :post %> |
+  <%= comment.votes.sum(:value) %>
+  <br>
   <%= comment.content %>
   <br>
 
