add friendly urls

--- a/app/views/subs/index.html.erb
+++ b/app/views/subs/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Subs</h1>
 <ul>
   <% @objects.each do |sub| %>
-    <li><%= link_to sub.title, sub_url(sub) %></li>
+    <li><%= link_to sub.title, sub %></li>
   <% end %>
 </ul>
