--- a/app/views/subs/show.html.erb
+++ b/app/views/subs/show.html.erb
@@ -6,6 +6,6 @@
 </p>
 <ul>
   <% @object.posts_by_vote.each do |post| %>
-    <li><%= link_to post.title, post_url(post) %> - <%= post.votes.sum(:value) %></li>
+    <li><%= link_to post.title, post %> - <%= post.votes.sum(:value) %></li>
   <% end %>
 </ul>
