posts and subs are paginated

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,8 +3,8 @@
   <% end %>
 <h1><%= @object.title %> <small><%= @object.url %></small></h1>
 <div>
-  <%= link_to "upvote", post_upvote_url(@object), method: :post %><br>
-  <%= link_to "downvote", post_downvote_url(@object), method: :post %><br>
+  <%= link_to "upvote", post_upvote_url(@object.id), method: :post %><br>
+  <%= link_to "downvote", post_downvote_url(@object.id), method: :post %><br>
   <%= @object.votes.sum(:value) %>
 </div>
 <h2>by <%= @object.author.username %></h2>
