--- a/app/views/subs/show.html.erb
+++ b/app/views/subs/show.html.erb
@@ -4,8 +4,9 @@
 <p>
   <%= @object.description %>
 </p>
+<%= paginate @posts %>
 <ul>
-  <% @object.posts_by_vote.each do |post| %>
+  <% @posts.each do |post| %>
     <li><%= link_to post.title, post %> - <%= post.votes.sum(:value) %></li>
   <% end %>
 </ul>
